@@ -10,11 +10,11 @@ Version 2.23
 * The following bugs are resolved with this release:
 
   2542, 2543, 2558, 2898, 14341, 14912, 15786, 15918, 16141, 16296, 16517,
-  16519, 16520, 16521, 16734, 16973, 16985, 17243, 17787, 17905, 18084,
-  18086, 18240, 18265, 18370, 18421, 18480, 18525, 18595, 18610, 18618,
-  18647, 18661, 18674, 18675, 18681, 18757, 18778, 18781, 18787, 18789,
-  18790, 18795, 18796, 18820, 18823, 18824, 18857, 18863, 18870, 18873,
-  18875, 18887, 18921, 18952, 18961, 18966, 18967.
+  16519, 16520, 16521, 16734, 16973, 16985, 17243, 17244, 17787, 17905,
+  18084, 18086, 18240, 18265, 18370, 18421, 18480, 18525, 18595, 18610,
+  18618, 18647, 18661, 18674, 18675, 18681, 18757, 18778, 18781, 18787,
+  18789, 18790, 18795, 18796, 18820, 18823, 18824, 18857, 18863, 18870,
+  18873, 18875, 18887, 18921, 18952, 18961, 18966, 18967.
 
 * The obsolete header <regexp.h> has been removed.  Programs that require
   this header must be updated to use <regex.h> instead.
